{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 70,
  "lineage": "f97f5cc7-1c57-ca58-f2de-f59ffd5704a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-79ba3551681d1ceaa",
            "id": "igw-79ba3551681d1ceaa",
            "owner_id": "000000000000",
            "tags": {
              "Name": "demo-igw",
              "Project": "cloudblocks-demo"
            },
            "tags_all": {
              "Name": "demo-igw",
              "Project": "cloudblocks-demo"
            },
            "vpc_id": "vpc-9e1ba93cd6d6afbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-6ed34b8938220b877",
            "description": "Application security group (correctly configured)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-6ed34b8938220b877",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-3c368b709fe13e6a4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-app-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-app-sg",
              "Project": "cloudblocks-demo"
            },
            "tags_all": {
              "Name": "demo-app-sg",
              "Project": "cloudblocks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e1ba93cd6d6afbc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-3c368b709fe13e6a4",
            "description": "Bastion security group (intentionally misconfigured for advisory testing)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-3c368b709fe13e6a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "INTENTIONAL: SSH from anywhere - triggers ec2-public-ssh advisory",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-bastion-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-bastion-sg",
              "Project": "cloudblocks-demo"
            },
            "tags_all": {
              "Name": "demo-bastion-sg",
              "Project": "cloudblocks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e1ba93cd6d6afbc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-8997014b6617c8b93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-8997014b6617c8b93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-private-subnet",
              "Project": "cloudblocks-demo"
            },
            "tags_all": {
              "Name": "demo-private-subnet",
              "Project": "cloudblocks-demo"
            },
            "vpc_id": "vpc-9e1ba93cd6d6afbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-71e80362e616a3e95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-71e80362e616a3e95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-subnet",
              "Project": "cloudblocks-demo"
            },
            "tags_all": {
              "Name": "demo-public-subnet",
              "Project": "cloudblocks-demo"
            },
            "vpc_id": "vpc-9e1ba93cd6d6afbc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-9e1ba93cd6d6afbc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-ab1f2d052f44c1d34",
            "default_route_table_id": "rtb-c376491e876475c79",
            "default_security_group_id": "sg-8668489ed45760fb4",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-9e1ba93cd6d6afbc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-c376491e876475c79",
            "owner_id": "000000000000",
            "tags": {
              "Name": "demo-vpc",
              "Project": "cloudblocks-demo"
            },
            "tags_all": {
              "Name": "demo-vpc",
              "Project": "cloudblocks-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}